--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <name>tutorail4</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/SE-Design-and-construction/tutorial4.git</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
