--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,14 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
+        distribution: 'temurin' # or 'zulu', 'adoptopenjdk' as needed
 
     - name: Run Maven build
       run: mvn clean test
+
